# eegmodeling-openmiir

./: .gitignore  README.md  pyproject.toml
derivatives/: P01-events.npy
derivatives/report/: P01_preprocess_summary.txt
src/: stage1_load.py  stage1_preprocess.py
